# owl

./: .gitignore  Cargo.toml  README.md
src/: logger.rs  main.rs
src/config/: log4rs.yaml  mod.rs
src/config/constants/: logger_constants.rs  mod.rs  note_constants.rs
src/config/types/: database_types.rs  mod.rs  security_types.rs
src/data_management/: database.rs  mod.rs
src/data_management/cache/: mod.rs
src/integration/: mod.rs
src/integration/database/: def.rs  mod.rs  query.rs
src/interface/: mod.rs
src/localization/: mod.rs
src/note/: mod.rs
src/note/format/: mod.rs
src/security/: mod.rs
src/security/encryption/: mod.rs
src/user_interface/: mod.rs  test.rs
