[package]
name = "owl"
version = "0.1.0"
authors = ["Ada Villa <adaellenvilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
sha2 = "0.9.5"
generic-array = "0.14.4"
digest = "0.9.0"
rusqlite = "0.16.0"